--- a/assets/style.css
+++ b/assets/style.css
@@ -2,10 +2,14 @@
   max-height: 300px;
   max-width: 300px;
   padding-left: 325px;
+  padding-bottom: 400px;
+  padding-top: 100px;
+  border-radius: 25px;
+  border-color: darkgreen;
 }
 
 body {
-  background-image: url(assets/hot_matcha.jpg);
+  background-color: bisque;
 }
 
 h1 {
@@ -18,12 +22,36 @@ h2 {
 }
 
 .form {
-  background-color: rgb(73, 241, 73);
+  background-color: rgb(34, 175, 34);
 }
 
 form {
+  padding-top: 20px;
   font-size: large;
   font-weight: bold;
   text-align: center;
-  margin-top: 10px;
+  text-decoration: none;
+}
+footer {
+  text-align: center;
+}
+ul {
+  background-color: aquamarine;
+  list-style: none;
+  text-decoration: none;
+  text-align: right;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+li {
+  display: inline-block;
+  text-align: center;
+  padding: 20px;
+}
+#format_button {
+  margin-left: 465px;
+  text-align: center;
+  margin-bottom: 20px;
 }
