--- a/assets/style.css
+++ b/assets/style.css
@@ -26,16 +26,15 @@ form {
   padding-top: 20px;
   font-size: large;
   font-weight: bold;
-  text-align: center;
+  margin-left: 10%;
   text-decoration: none;
 }
 footer {
   text-align: center;
 }
 ul {
-  background-color: aquamarine;
+  background-color: rgb(10, 168, 10);
   list-style: none;
-  text-decoration: none;
   text-align: right;
   list-style-type: none;
   margin: 0;
@@ -46,9 +45,11 @@ li {
   display: inline-block;
   text-align: center;
   padding: 20px;
+  font-weight: bolder;
+  text-decoration-color: bisque;
 }
 #format_button {
-  margin-left: 50%;
+  margin-left: 10%;
   text-align: center;
   margin-bottom: 20px;
   position: relative;
